
package JuranwuyouUser

import (
	"context"
    
    "zhangkai.com/mysql-to-proto/pb/JuranwuyouUser"
    
)

type UserMerchantServer struct{}

func (server *UserMerchantServer) UpdateUserMerchant(context context.Context, request *JuranwuyouUser.UserMerchantRequest) (response *JuranwuyouUser.UserMerchantResponse, err error) {
	panic("implement me")
    return 
}

func (server *UserMerchantServer) GetUserMerchant(context context.Context, request *JuranwuyouUser.UserMerchantFilter) (response *JuranwuyouUser.UserMerchantRequest, err error) {
	panic("implement me")
    return 
}

func (server *UserMerchantServer) CreateUserMerchant(context context.Context, request *JuranwuyouUser.UserMerchantRequest) (response *JuranwuyouUser.UserMerchantResponse, err error) {
	panic("implement me")
    return 
}

